# Replica-Reaper

./: Auto.py  CMakeLists.txt  CPPLINT.cfg  FileInfo.hpp  Jenkinsfile  README.md  appsettings.hpp  assets.qrc  filemanager.cpp  filemanager.h  filemanager.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  settings.cpp  settings.hpp  settings.ui  trashmanager.hpp  trashmanager_mac.mm  trashmanager_win.cpp  tutorial.cpp  tutorial.hpp  tutorial.ui  worker.hpp
.github/workflows/: main.yml
Installer/config/: config.xml  style.qss
UnitTest/: CMakeLists.txt  assets.qrc  tst_filemanager.cpp
assets/: styles.qss
